Bug #19650 "Embedded" crashes in 5.1.10
Submitted: 9 May 2006 18:27 Modified: 10 Jul 2006 12:00
Reporter: Joerg Bruehe Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Embedded Library ( libmysqld ) Severity:S1 (Critical)
Version:5.1.9-beta + 5.1.10-beta OS:various Unix
Assigned to: Alexey Botchkov CPU Architecture:Any

[9 May 2006 18:27] Joerg Bruehe
Description:
When running the tests "embedded", the application crashes (for all tests).

Symptom in 5.1.9-beta:
=====
alias                          [ fail ]

Errors are (from PATH/mysqltest-time) :
mysqltest returned unexpected code 139, it has probably crashed
(the last lines may be the most important ones)

Killing Possible Leftover Processes
=====
Occurred:
build-5.1-community.log   embedded
etpglb0-5.1-community.log   embedded
hammer-glibc23-5.1-community.log   embedded
nocona-icc-glibc23-5.1-community.log   embedded
osx-imac-x86-5.1-community.log   embedded
pegasos3-glibc23-5.1-community.log   embedded
production-icc-glibc23-5.1-community.log   embedded

Symptom in 5.1.10-beta:
=====
alias                          [ fail ]

Errors are (from /PATH/mysqltest-time) :
YYMMDD HH:MM:SS [Warning] mysql_embedded: unknown variable 'loose-binlog-show-xid=0'

YYMMDD HH:MM:SS [Warning] mysql_embedded: unknown variable 'loose-binlog-show-xid=0'

InnoDB: The first specified data file /PATH/mysql-test/var/master-data/ibdata1 did not exist:
InnoDB: a new database to be created!
YYMMDD HH:MM:SS  InnoDB: Setting file /PATH/mysql-test/var/master-data/ibdata1 size to 10 MB
InnoDB: Database physically writes the file full: wait...
YYMMDD HH:MM:SS  InnoDB: Log file /PATH/mysql-test/var/master-data/ib_logfile0 did not exist: new to be created
InnoDB: Setting log file /PATH/mysql-test/var/master-data/ib_logfile0 size to 5 MB
InnoDB: Database physically writes the file full: wait...
YYMMDD HH:MM:SS  InnoDB: Log file /PATH/mysql-test/var/master-data/ib_logfile1 did not exist: new to be created
InnoDB: Setting log file /PATH/mysql-test/var/master-data/ib_logfile1 size to 5 MB
InnoDB: Database physically writes the file full: wait...
InnoDB: Doublewrite buffer not found: creating new
InnoDB: Doublewrite buffer created
InnoDB: Creating foreign key constraint system tables
InnoDB: Foreign key constraint system tables created
mysqltest returned unexpected code 139, it has probably crashed
(the last lines may be the most important ones)

Restoring snapshot of databases
Resuming Tests
=====
Occured:
./hammer-glibc23-5.1-community.log   embedded
./sol10-amd64-a-5.1-community.log   embedded
./bsd60-64-5.1-community.log   embedded
./production-icc-glibc23-5.1-community.log   embedded
./nocona-icc-glibc23-5.1-community.log   embedded
./pegasos3-glibc23-5.1-community.log   embedded

How to repeat:
Found by the release build tools.
[9 May 2006 19:12] Joerg Bruehe
Very similar crash on "powermacg5",
but the exit code is 138 (signal 10) where the others have 139 (signal 11).
[24 May 2006 8:12] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/6814