bug #19650 (Embedded crashes in 5.1.10)